--- a/.env.local.example
+++ b/.env.local.example
@@ -1,13 +1,3 @@
-# https://vercel.com/docs/storage/vercel-postgres
-POSTGRES_URL=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_HOST=
-POSTGRES_DATABASE=
-
-NEXTAUTH_URL=http://localhost:3000
-AUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
-
-# https://next-auth.js.org/providers/github
-OAUTH_CLIENT_KEY=
-OAUTH_CLIENT_SECRET=
+JWT_SECRET=""
+MARES_API_BASE_URL=""
+MARES_API_V1_BASE_URL=""
